@@ -85,10 +85,10 @@ const unsigned long mgl_nan[2] = {0xffffffff, 0x7fffffff};
 //-----------------------------------------------------------------------------
 #if MGL_USE_DOUBLE
 typedef double mreal;
-#define MGL_EPSILON	(1.+1e-12)
+#define MGL_EPSILON	(1.+1e-10)
 #else
 typedef float mreal;
-#define MGL_EPSILON	(1.+1e-6)
+#define MGL_EPSILON	(1.+1e-5)
 #endif
 //-----------------------------------------------------------------------------
 #ifndef MGL_CMAP_COLOR
