@@ -1,5 +1,6 @@
 2.1 Released ?? July 2012
 
+* Add gap between 1d plots for avoiding possible undetermined overlapping.
 * Add SetTimeUTC() for using UTC time instead of local one
 * Add SetTickShift() for additional shift of tick labels
 * Add cmake options 'enable-png' and 'enable-zlib'
